feat: rename Item to Habit and update repository implementation